--- a/p8105_hw2_wd2311.md
+++ b/p8105_hw2_wd2311.md
@@ -18,6 +18,18 @@ library(tidyverse)
     ## ✖ dplyr::lag()    masks stats::lag()
     ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
 
+``` r
+library(readxl)
+library(janitor)
+```
+
+    ## 
+    ## Attaching package: 'janitor'
+    ## 
+    ## The following objects are masked from 'package:stats':
+    ## 
+    ##     chisq.test, fisher.test
+
 # Problem 1
 
 Read and clean the data in pols-month.csv
@@ -133,10 +145,12 @@ summary(select(merged_df, year, month, close, unemployment, president))
 
 Explain briefly what each dataset contained, and describe the resulting
 dataset (e.g. give the dimension, range of years, and names of key
-variables). \### Description: pols_month_df provides monthly counts of
-national political officeholders and a president indicator; snp\_.csv_df
-contains S&P 500 closing values by date. unemp_loyment.csv_df reports
-monthly U.S. unemployment rates in wide form.
+variables).
+
+pols_month_df provides monthly counts of national political
+officeholders and a president indicator; snp\_.csv_df contains S&P 500
+closing values by date. unemp_loyment.csv_df reports monthly U.S.
+unemployment rates in wide form.
 
 After left-joining S&P into pols and then unemployment into the result,
 the final merged dataset has 822 rows and 11 columns, spans 1947 to
@@ -144,5 +158,113 @@ the final merged dataset has 822 rows and 11 columns, spans 1947 to
 unemployment, and 6 variables on the parties of national politicians.
 
 # Problem 2
+
+Read and clean the Mr. Trash Wheel sheet:
+
+``` r
+MrTW_df = 
+  read_excel("./data/Trash Wheel Collection.xlsx", sheet = "Mr. Trash Wheel", 
+             skip = 1,na = c(".", "NA", ""))|>
+  clean_names() |>
+  filter(!is.na(dumpster)) |>
+  mutate(
+    sports_balls = as.integer(round(sports_balls)),
+    wheel = "Mr. Trash Wheel",
+    )|>
+  select(dumpster, wheel, everything(), where(~!all(is.na(.)))) 
+```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
+
+Read and clean the Professor Trash Wheel sheet:
+
+``` r
+ProfTW_df = 
+  read_excel("./data/Trash Wheel Collection.xlsx", sheet = "Professor Trash Wheel", 
+             skip = 1,na = c(".", "NA", ""))|>
+  clean_names() |>
+  filter(!is.na(dumpster)) |>
+  mutate(
+    wheel = "Professor Trash Wheel",
+    )|>
+  select(dumpster, wheel, everything(), ) 
+```
+
+Read and clean the Professor Gwynnda sheet:
+
+``` r
+Gwynns_df = 
+  read_excel("./data/Trash Wheel Collection.xlsx", sheet = "Gwynns Falls Trash Wheel", 
+             skip = 1,na = c(".", "NA", ""))|>
+  clean_names() |>
+  filter(!is.na(dumpster)) |>
+  mutate(
+    wheel = "Professor Trash Wheel",
+    )|>
+  select(dumpster, wheel, everything(), ) 
+```
+
+Merge the sheets
+
+``` r
+std_keys <- function(df) {
+  df |>
+    mutate(
+      year  = as.integer(year),
+      month = case_when(
+        is.numeric(month) ~ tolower(month.name[pmax(1, pmin(12, month))]),
+        TRUE              ~ tolower(as.character(month))
+      )
+    )
+}
+
+MrTW_df   <- std_keys(MrTW_df)
+ProfTW_df <- std_keys(ProfTW_df)
+Gwynns_df <- std_keys(Gwynns_df)
+
+all_df <- bind_rows(MrTW_df, ProfTW_df, Gwynns_df)
+
+prof_total_weight_tons <- all_df |>
+  filter(wheel == "Professor Trash Wheel") |>
+  summarize(total = sum(weight_tons, na.rm = TRUE)) |>
+  pull()
+
+gwyn_cigs_jun_2022 <- all_df |>
+  filter(wheel == "Gwynnda Trash Wheel", year == 2022, month == "june") |>
+  summarize(total = sum(cigarette_butts, na.rm = TRUE)) |>
+  pull()
+
+dim(all_df)
+```
+
+    ## [1] 1188   17
+
+``` r
+names(all_df)
+```
+
+    ##  [1] "dumpster"           "wheel"              "month"             
+    ##  [4] "year"               "date"               "weight_tons"       
+    ##  [7] "volume_cubic_yards" "plastic_bottles"    "polystyrene"       
+    ## [10] "cigarette_butts"    "glass_bottles"      "plastic_bags"      
+    ## [13] "wrappers"           "sports_balls"       "homes_powered"     
+    ## [16] "x15"                "x16"
+
+Write a paragraph about these data After cleaning and combining the
+three Trash Wheel datasets, the resulting tidy data frame contains
+**1188 observations** and **17 variables**. Each row corresponds to a
+dumpster collection event, and key variables include the **date of
+collection** (`date`, `year`, `month`), the **total weight of trash
+collected** (`weight_tons`), the **volume** (`volume_cubic_yards`), and
+counts of specific items such as `plastic_bottles`, `polystyrene`,
+`cigarette_butts`, and `sports_balls`. An additional variable `wheel`
+indicates which device (Mr. Trash Wheel, Professor Trash Wheel, or
+Gwynnda) collected the trash.
+
+Based on the available data, **Professor Trash Wheel** collected a total
+of **1 353.73 tons** of trash. In **June 2022**, **Gwynnda** collected
+**0 cigarette butts**.
 
 # Problem 3
