--- a/p8105_hw2_wd2311.md
+++ b/p8105_hw2_wd2311.md
@@ -268,3 +268,156 @@ of **1 353.73 tons** of trash. In **June 2022**, **Gwynnda** collected
 **0 cigarette butts**.
 
 # Problem 3
+
+Import and tidy the data
+
+``` r
+zip_path  <- "data/Zip Codes.csv"
+zori_path <- "data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv"
+
+zip_lu =
+  read_csv(zip_path) |>
+  clean_names() |>
+  mutate(zip_code = as.character(zip_code)) |>
+  rename(
+    borough     = county,
+    neighborhood = neighborhood  
+  ) |>
+  select(zip_code, borough, neighborhood)
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+zori_long <- read_csv(zori_path) |>
+  clean_names() |>
+  mutate(region_name = as.character(region_name)) |>
+  pivot_longer(
+    cols = starts_with("x"),     
+    names_to = "date_chr",
+    values_to = "zori"
+  ) |>
+  mutate(
+    date = as.Date(gsub("^x", "", gsub("_", "-", date_chr))),
+    .keep = "unused"
+  ) |>
+  arrange(region_name, date)
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+merge and describe the resulting tidy dataset
+
+``` r
+zori_merged <- zori_long |>
+  left_join(zip_lu, by = c("region_name" = "zip_code")) |>
+  relocate(region_name, borough, neighborhood, date, zori)
+```
+
+    ## Warning in left_join(zori_long, zip_lu, by = c(region_name = "zip_code")): Detected an unexpected many-to-many relationship between `x` and `y`.
+    ## ℹ Row 7541 of `x` matches multiple rows in `y`.
+    ## ℹ Row 79 of `y` matches multiple rows in `x`.
+    ## ℹ If a many-to-many relationship is expected, set `relationship =
+    ##   "many-to-many"` to silence this warning.
+
+``` r
+total_obs  <- nrow(zori_merged)
+n_zip      <- n_distinct(zori_merged$region_name)
+n_nh       <- n_distinct(na.omit(zori_merged$neighborhood))
+
+summary_list <- list(
+  total_observations   = total_obs,
+  unique_zip_codes     = n_zip,
+  unique_neighborhoods = n_nh
+)
+print(summary_list)
+```
+
+    ## $total_observations
+    ## [1] 17516
+    ## 
+    ## $unique_zip_codes
+    ## [1] 149
+    ## 
+    ## $unique_neighborhoods
+    ## [1] 42
+
+Description： total_observations：17516. unique_zip_codes:
+149.unique_neighborhoods = 42.
+
+ZIPs that are in the ZIP file but not in Zillow
+
+``` r
+zips_in_zip  <- zip_lu |> distinct(zip_code)
+zips_in_zori <- zori_long |> distinct(region_name) |> rename(zip_code = region_name)
+
+missing_zip <- zips_in_zip |> anti_join(zips_in_zori, by = "zip_code")
+n_missing <- nrow(missing_zip)
+cat("ZIPs present in ZIP file but missing in Zillow:", n_missing, "\n")
+```
+
+    ## ZIPs present in ZIP file but missing in Zillow: 171
+
+Description： 171 ZIP codes appear in the ZIP code file but not in the
+Zillow rental dataset. for exmaples: 10499 (Bronx GPO) is
+special-purpose or PO-box ZIPs without housing. 11371 (LaGuardia) is
+airport ZIPs, not residential. 10550 (Mount Vernon) is outside NYC’s
+five boroughs.
+
+COVID dip Jan 2021 vs Jan 2020
+
+``` r
+jan_2020 <- zori_merged |>
+  filter(date == as.Date("2020-01-31")) |>
+  select(region_name, zori_2020 = zori, borough, neighborhood)
+
+jan_2021 <- zori_merged |>
+  filter(date == as.Date("2021-01-31")) |>
+  select(region_name, zori_2021 = zori)
+
+delta_2020_2021 <- jan_2020 |>
+  inner_join(jan_2021, by = "region_name") |>
+  mutate(change = zori_2021 - zori_2020) |>
+  arrange(change)
+```
+
+    ## Warning in inner_join(jan_2020, jan_2021, by = "region_name"): Detected an unexpected many-to-many relationship between `x` and `y`.
+    ## ℹ Row 66 of `x` matches multiple rows in `y`.
+    ## ℹ Row 66 of `y` matches multiple rows in `x`.
+    ## ℹ If a many-to-many relationship is expected, set `relationship =
+    ##   "many-to-many"` to silence this warning.
+
+``` r
+top10_drop <- delta_2020_2021 |>
+  slice_head(n = 10)
+
+print(top10_drop, n = 10)
+```
+
+    ## # A tibble: 10 × 6
+    ##    region_name zori_2020 borough  neighborhood                  zori_2021 change
+    ##    <chr>           <dbl> <chr>    <chr>                             <dbl>  <dbl>
+    ##  1 10007           6334. New York Lower Manhattan                   5422.  -913.
+    ##  2 10069           4623. New York <NA>                              3875.  -748.
+    ##  3 10009           3406. New York Lower East Side                   2692.  -714.
+    ##  4 10016           3731. New York Gramercy Park and Murray Hill     3019.  -712.
+    ##  5 10001           4108. New York Chelsea and Clinton               3398.  -710.
+    ##  6 10002           3645. New York Lower East Side                   2935.  -710.
+    ##  7 10004           3150. New York Lower Manhattan                   2444.  -706.
+    ##  8 10038           3573. New York Lower Manhattan                   2876.  -698.
+    ##  9 10012           3629. New York Greenwich Village and Soho        2942.  -686.
+    ## 10 10010           3697. New York Gramercy Park and Murray Hill     3012.  -685.
